@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1114 2009-12-22 15:32:38 mb Exp $
+# $Id: CHANGES,v 1.1115 2009-12-23 22:25:42 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -141,6 +141,10 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.6 (2009/??/??)
+ - (2009/12/23) Fixed bug#4428 - PGP-inline signed messages can't be encoded
+    correctly with rich text editor.
+ - (2009/12/16) Fixed bug#4503 - Border around image does not display well
+    in some email clients.
  - (2009/12/13) Fixed bug#4393 - AgentTicketQueue - Small view takes long to load.
  - (2009/12/09) Fixed crash in Ascii2Html() if no scalar reference is given.
  - (2009/12/09) Fixed bug#4551 - GenericAgent appends leading zeros to dates
